# Robust-MOSEI-Sentiment-Classification.

./: .gitignore  README.md  deep-research-report (1).md  pyproject.toml
configs/: default.yaml  eidmsa_robust_v2.yaml
docs/: video_incident_reviewer.md
phd_realistic_sentiment/: README.md  pyproject.toml
phd_realistic_sentiment/docs/: THESIS_CLAIM.md
phd_realistic_sentiment/scripts/: build_thesis_pack.py  generate_plots.py  run_realistic_benchmark.py  train_robust_v2.py
phd_realistic_sentiment/src/real_sentiment/: __init__.py  benchmark.py  claim.py  (+2 more)
phd_realistic_sentiment/tests/: test_benchmark.py  test_bootstrap.py  test_transfer.py
scripts/: build_claim_report.py  build_final_report.py  build_proof_report.py  build_visual_pack.py  download_mosei.py  evaluate_checkpoint.py  finetune_eidmsa_retry.py  graphifyy.py  plot_results.py  review_incident_video.py  run_eidmsa_experiments.py  run_experiments.py  run_speed_bench.sh  train.py
slides/: outline.md
src/multimod/: __init__.py  config.py  evaluation.py  reporting.py  training.py  utils.py  video_review.py
tests/: __init__.py  helpers.py  test_build_claim_report.py  test_build_proof_report.py  test_data_pipeline.py  test_eidmsa.py  test_evaluation.py  test_models.py  test_reporting.py  test_training_smoke.py  test_video_review.py
v2.0/: README.md  pyproject.toml
v2.0/docs/: ROADMAP.md
v2.0/scripts/: build_proposal_pack.py  generate_plots.py  run_realistic_benchmark.py  train_robust_v2.py
v2.0/src/real_sentiment/: bootstrap.py  transfer.py
v2.0/tests/: test_claim.py  test_corruptions.py
(+13 files in other folders)
